--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Ignore application.yml inside the resources folder
+src/main/resources/application.yml
+
+
